2.8 Follow Path bug #62601

Closed
opened 2019-03-15 03:23:12 +01:00 by 楊景貴 · 16 comments

{F6826940}System Information
Operating system: Windows-10-10.0.17134 64 Bits
Graphics card: Quadro K620/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 386.01

Blender Version
Broken: version: 2.80 (sub 48), branch: master, commit date: 2019-03-13 19:14, hash: bbc3ee09e4
Worked: (optional)

Short description of error

當我在2.79做同樣的事
物題不會有偏移

When I did the same thing at 2.79
Objects will not have an offset

Exact steps for others to reproduce the error
ctrl+P > Follow Path
......Abnormal offset

2019-03-15 08_45_51-Window.png

2019-03-15 08_49_03-Window.png

{[F6826940](https://archive.blender.org/developer/F6826940/Follow_Path_BUG.blend)}**System Information** Operating system: Windows-10-10.0.17134 64 Bits Graphics card: Quadro K620/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 386.01 **Blender Version** Broken: version: 2.80 (sub 48), branch: master, commit date: 2019-03-13 19:14, hash: `bbc3ee09e4` Worked: (optional) **Short description of error** 當我在2.79做同樣的事 物題不會有偏移 When I did the same thing at 2.79 Objects will not have an offset **Exact steps for others to reproduce the error** ctrl+P > Follow Path ......Abnormal offset ![2019-03-15 08_45_51-Window.png](https://archive.blender.org/developer/F6826946/2019-03-15_08_45_51-Window.png) ![2019-03-15 08_49_03-Window.png](https://archive.blender.org/developer/F6826949/2019-03-15_08_49_03-Window.png)
Author

Added subscriber: @Yang_Jing_Gui

Added subscriber: @Yang_Jing_Gui
Author

我的母語是繁體中文
我都是用 google 的翻譯
如果有不清楚的地方,或是翻譯上的誤會
還請包涵
My native language is Traditional Chinese.
I use google's translation
If there is something unclear, or misunderstanding in translation
Please also bear

我的母語是繁體中文 我都是用 google 的翻譯 如果有不清楚的地方,或是翻譯上的誤會 還請包涵 My native language is Traditional Chinese. I use google's translation If there is something unclear, or misunderstanding in translation Please also bear

Added subscriber: @capnm

Added subscriber: @capnm

Seems dependent on state of the 'Follow' check box:

  • selected v2.79 OK, v2.8 broken
  • unselected v2.79 broken, v2.8 OK

follow.png

Seems dependent on state of the 'Follow' check box: * selected v2.79 OK, v2.8 broken * unselected v2.79 broken, v2.8 OK ![follow.png](https://archive.blender.org/developer/F6828745/follow.png)

Added subscribers: @ideasman42, @WilliamReynish

Added subscribers: @ideasman42, @WilliamReynish

Tbh I don't even see why we should keep this feature at all. For many years we have had a constraints system for this kind of thing.

This is one of the features that is a remnant from before we had constraints inside Blender.

@ideasman42 What do you think? Is there a reason we've kept this around?

Tbh I don't even see why we should keep this feature at all. For many years we have had a constraints system for this kind of thing. This is one of the features that is a remnant from before we had constraints inside Blender. @ideasman42 What do you think? Is there a reason we've kept this around?

Think we could remove, check w/ other devs & guys in the studio?

Think we could remove, check w/ other devs & guys in the studio?

Added subscribers: @Sergey, @brecht

Added subscribers: @Sergey, @brecht

@brecht @Sergey

What do you think? Is this not a good time to clean this out?

@brecht @Sergey What do you think? Is this not a good time to clean this out?

I am against REMOVAL of features at bcon3. Might consider REPLACING them, with proper do-versioning.

To me it doesn't seem to be an issue with "Follow" option. It appears to be working correct to me. What doesn't appear correct to me is the calculation of an inverse parent matrix (which sound similar to #60623).

I am against REMOVAL of features at bcon3. Might consider REPLACING them, with proper do-versioning. To me it doesn't seem to be an issue with "Follow" option. It appears to be working correct to me. What doesn't appear correct to me is the calculation of an inverse parent matrix (which sound similar to #60623).

I agree with @sergey.

I agree with @sergey.

To me it doesn't seem to be an issue with "Follow" option. It appears to be working correct to me.

Yes, I only listed cases where the initial offset (this bug) appears.

> To me it doesn't seem to be an issue with "Follow" option. It appears to be working correct to me. Yes, I only listed cases where the initial offset (this bug) appears.

This issue was referenced by 9ad9d38786

This issue was referenced by 9ad9d38786c5d9f3e7f288f2e8255f3e7722da1f
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Seems indeed very similar to #60623.
This time the flag on the evaluated curve CU_FOLLOW is no set, leading to a different behaviour in ob_parcurve()

(possible) fix incoming...

Seems indeed very similar to #60623. This time the flag on the evaluated curve `CU_FOLLOW` is no set, leading to a different behaviour in `ob_parcurve()` (possible) fix incoming...
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62601
No description provided.