source/blender/editors/object/object_relations.c
@@ -628,14 +628,16 @@ bool ED_object_parent_set(ReportList *reports, const bContext *C, Scene *scene, 
 			return 0;
 		else {
 			Curve *cu = par->data;
-
+			Curve *cu_eval = parent_eval->data;
 			if ((cu->flag & CU_PATH) == 0) {
 				cu->flag |= CU_PATH | CU_FOLLOW;
+				cu_eval->flag |= CU_PATH | CU_FOLLOW;
 				/* force creation of path data */
 				BKE_displist_make_curveTypes(depsgraph, scene, par, false, false, NULL);
 			}
 			else {
 				cu->flag |= CU_FOLLOW;
+				cu_eval->flag |= CU_FOLLOW;
 			}
 
 			/* if follow, add F-Curve for ctime (i.e. "eval_time") so that path-follow works */
